update content while using keyboard
Change-Id: I4b20fcf2b00ecf8becd35055d5a6e9bc6b4a8cfc

--- a/multitimer.html
+++ b/multitimer.html
@@ -57,10 +57,12 @@ function keydown(e)
 	{
 		case 38:
 			selectPrev();
+			changeId();
 			refresh();
 			break;
 		case 40:
 			selectNext();
+			changeId();
 			refresh();
 			break;
 		default:
